team/output/BD_00_00/3/0/op.txt
  File "/home/ubuntu/test-bigdata/adminmgr/media/code/A2/python/task/pr_3UdyU8i.py", line 103
    else:
    ^
IndentationError: expected an indented block
